feat(ai): Integrate Gemini AI assistant
Adds support for the Gemini AI assistant, including:
- New IPC handlers for AI chat streaming.
- UI elements and logic for interacting with the AI.
- Ability to configure API keys and enable/disable the feature in settings.
- Updates to tab view bounds to accommodate the AI panel.
- Dependency on `@google/genai`.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "electron-builder": "^24.13.3"
   },
   "dependencies": {
+    "@google/genai": "^0.15.0",
     "electron-window-state": "^5.0.3"
   }
 }
